--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <head>
-	<title>William Tran- Software Developer</title>
+	
 	<!-- <script type="text/javascript" src="../node_modules/jquery/dist/jquery.min.js"></script>
 	<script type="text/javascript" src="../node_modules/jquery/dist/jquery.js"></script>
 	<script type="text/javascript" src="../node_modules/materialize-css/dist/js/materialize.js"></script>
@@ -9,13 +9,14 @@
 	
 	
 </head>
-<body>
+<body data-spy="scroll" data-target=".navbar" data-offset="50">
 	<div class="navbar-fixed">
-		<nav data-activates="nav-mobile" class="button-collapse">
+		<nav data-activates="nav-mobile" class="navbar button-collapse">
 			<div class="nav-wrapper">
 
 				<a href="#home" class="brand-logo"><img class="logo" src="../assets/logo.png"></a>
 				<a materialize="sideNav" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+
 				<ul class="right hide-on-med-and-down">
 					<li><a href="#about">ABOUT ME</a></li>
 					<li><a href="#projects">PROJECTS</a></li>
