--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
 		<nav data-activates="nav-mobile" class="navbar button-collapse">
 			<div class="nav-wrapper">
 
-				<a href="#home" class="brand-logo"><img class="logo" src="../assets/logo.png"></a>
+				<a href="#home" class="brand-logo"><img class="logo" src="../assets/tech-logo.png"></a>
 				<a materialize="sideNav" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
 
 				<ul class="right hide-on-med-and-down">
