--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -66,17 +66,19 @@
 					<p class="black-font">To bring value through functionality, innovation and design.</p>
 				</div>
 				<div class="about-me">
+					<h5 class="darkblue">Software Development</h5>
+					<ul>
+						<li><p class="black-font">Proficient in Python, MEAN and Java full stack development.</p></li>
+						<li><p class="black-font">Perform SQL queries, CRUD operations, build out and deploy projects from client to server to database.</p></li>
+						<li><p class="black-font">Follow Object Oriented Programming, handling logic through MVC and MTV methods.</p></li>
+						<li><p class="black-font">Solve numerous problems through debugging and research.</p></li>
+						
+					</ul>
 					<h5 class="darkblue">Finance and Accounting</h5>
 					<ul>
 						<li><p class="black-font">10+ years of Finance and Accounting experience.</p></li>
 						<li><p class="black-font">Worked in various industries including Real Estate, Food and Beverage and Banking.</p></li>
 						<li><p class="black-font">Managing cash flows, financial reporting, variance analysis, process automation, financial analysis, reconciliation, capital distributions, profit distributions, and accruals.</p></li>
-					</ul>
-					<h5 class="darkblue">Software Development</h5>
-					<ul>
-						<li><p class="black-font">Proficient in Python, MEAN and Java full stack development.</p></li>
-						<li><p class="black-font">Perform SQL queries, CRUD operations, build out and deploy projects from client to server to database.</p></li>
-						
 					</ul>
 					<!-- <h5>From Finance to Technology</h5>
 					<p>Transitioning from the world of financial statements to having the opportunity to implement technology and creating applications that influences lives. Having worked in different industries with a focus on Finance and Accounting for 10+ years, I understood how microprocessing and automation play huge roles in companies. These advancements in technology paved way to my curiosity in software development.</p> --> 
