--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -129,6 +129,29 @@
 		
 		<ul class="collapsible popout" data-collapsible="accordion">
 			<li>
+			<div class="collapsible-header"><h4><i class="large material-icons plus">add_circle</i>Duly Noted</h4><p>Python</p></div>
+				<div class="collapsible-body">
+					<div class="box-one">
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/ktN8_u2OTJ4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+					</div>
+					<div class="box-two">
+						<h5>Description</h5>
+						<p class="body-padding">A simple, easy to use sticky note application. Users can register and login to create, update and delete their notes.</p>
+						<h5>Responsibilities</h5>
+						<ul class="bullets">
+							<li><p> Set up associations in the models for MySQL.</p></li>
+							<li><p> Implemented AJAX to handle post requests to create, delete and update notes.</p></li>
+							<li><p> Implemented modal for registration, validations, error handling.</p></li>
+							<li><p> Deployed of project using AWS EC2.</p></li>
+						</ul>
+						<h5 class="built">This project was built with: </h5>
+						<p class="body-padding">Python, Django, AJAX, HTML, BootStrap, jQuery, MySQL, SQLite</p>
+						<a href="http://github.com/wtran29/post"><button class="git-button">Github</button></a>
+						<a href="18.217.19.208"><button class="live-button">Live Version</button></a>
+					</div>
+				</div>
+			</li>
+			<li>
 			<div class="collapsible-header"><h4><i class="large material-icons plus">add_circle</i>Club of Diamonds</h4><p>JavaScript</p></div>
 				<div class="collapsible-body">
 					<div class="box-one">
