updated deployed link

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -147,7 +147,7 @@
 						<h5 class="built">This project was built with: </h5>
 						<p class="body-padding">Python, Django, AJAX, HTML, BootStrap, jQuery, MySQL, SQLite</p>
 						<a href="http://github.com/wtran29/post"><button class="git-button">Github</button></a>
-						<a href="18.217.19.208"><button class="live-button">Live Version</button></a>
+						<a href="http://18.217.19.208"><button class="live-button">Live Version</button></a>
 					</div>
 				</div>
 			</li>
