--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -129,6 +129,31 @@
 		
 		<ul class="collapsible popout" data-collapsible="accordion">
 			<li>
+			<div class="collapsible-header"><h4><i class="large material-icons plus">add_circle</i>Techliner</h4><p>React</p></div>
+				<div class="collapsible-body">
+					<div class="box-one">
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/er_9xyxaQ50" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+					</div>
+					<div class="box-two">
+						<h5>Description</h5>
+						<p class="body-padding">A tech news site based off of Hacker News API, featuring the top 10 rated articles. The user has the ability to toggle ascending/descending order when the button is clicked based on the title, author, comments and points, delete articles and load the next 10 articles.</p>
+						<h5>Responsibilities</h5>
+						<ul class="bullets">
+							<li><p> Set up the local state, components, and API routes.</p></li>
+							<li><p> Implemented sorting function for buttons to get news articles by ascending/descending order and load pages.</p></li>
+							<li><p> Implemented server side search and client side caching.</p></li>
+							<li><p> Implemented loading function to be user friendly.</p></li>
+							<li><p> Organized and refactored code.</p></li>
+							<li><p> Deployed of project using Github Pages.</p></li>
+						</ul>
+						<h5 class="built">This project was built with: </h5>
+						<p class="body-padding">React, JavaScript, Bootstrap, API</p>
+						<a href="http://github.com/wtran29/techliner"><button class="git-button">Github</button></a>
+						<a href="https://wtran29.github.io/techliner/"><button class="live-button">Live Version</button></a>
+					</div>
+				</div>
+			</li>
+			<li>
 			<div class="collapsible-header"><h4><i class="large material-icons plus">add_circle</i>Duly Noted</h4><p>Python</p></div>
 				<div class="collapsible-body">
 					<div class="box-one">
