--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -8,8 +8,8 @@
 	<script type="text/javascript" src="../node_modules/materialize-css/dist/js/materialize.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-	
-	
+
+
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
 	<!-- <div class="navbar-fixed">
@@ -36,11 +36,11 @@
 		<li><a href="#tech">TECHNOLOGIES</a></li>
 		<li><a href="#contact">CONTACT ME</a></li>
 		<div class="divider"></div>
-		
+
 	</ul> -->
 	<div class="parallax-container">
 		<div class="parallax">
-			
+
 		<div class="headline" id="home">
 			<h1>William Tran</h1>
 
@@ -61,8 +61,8 @@
 			<h2>About Me</h2>
 			<div class="me-section">
 				<div class="about-me2">
-					<img src="../assets/freelancer.jpg" class="me">
-					<h5 class="darkblue">Vision</h5>	
+					<img src="../assets/profile.jpg" class="me">
+					<h5 class="darkblue">Vision</h5>
 					<p class="black-font">To bring value through functionality, innovation and design.</p>
 				</div>
 				<div class="about-me">
@@ -72,7 +72,7 @@
 						<li><p class="black-font">Perform SQL queries, CRUD operations, build out and deploy projects from client to server to database.</p></li>
 						<li><p class="black-font">Follow Object Oriented Programming, handling logic through MVC and MTV methods.</p></li>
 						<li><p class="black-font">Solve numerous problems through debugging and research.</p></li>
-						
+
 					</ul>
 					<h5 class="darkblue">Finance and Accounting</h5>
 					<ul>
@@ -81,7 +81,7 @@
 						<li><p class="black-font">Managing cash flows, financial reporting, variance analysis, process automation, financial analysis, reconciliation, capital distributions, profit distributions, and accruals.</p></li>
 					</ul>
 					<!-- <h5>From Finance to Technology</h5>
-					<p>Transitioning from the world of financial statements to having the opportunity to implement technology and creating applications that influences lives. Having worked in different industries with a focus on Finance and Accounting for 10+ years, I understood how microprocessing and automation play huge roles in companies. These advancements in technology paved way to my curiosity in software development.</p> --> 
+					<p>Transitioning from the world of financial statements to having the opportunity to implement technology and creating applications that influences lives. Having worked in different industries with a focus on Finance and Accounting for 10+ years, I understood how microprocessing and automation play huge roles in companies. These advancements in technology paved way to my curiosity in software development.</p> -->
 					<h5 class="darkblue">My Goals</h5>
 					<ul>
 						<li><p class="black-font">Continuous learning and dedication to improving my craft.</p></li>
@@ -89,7 +89,7 @@
 						<li><p class="black-font">Incorporate my Finance/Accounting experience to create apps for data analytics and improve processes for various industries.</p></li>
 					</ul>
 				</div>
-				
+
 			</div>
 		</div>
 	</div>
@@ -106,7 +106,7 @@
 		<ng-template #prev>
 			<img src="../assets/chevron-left.png" id="left">
 		</ng-template>
-			
+
 		<ng-template #next>
 			<img src="../assets/chevron-right.png" id="right">
 		</ng-template>
@@ -118,15 +118,15 @@
 				<p class="font-size">{{ item.label }}</p>
 			</div>
 		</ng-template>
-		
+
 	</div>
-	<div class="container">	
+	<div class="container">
 		<div id="projects">
 			<br>
 			<h2 class="darkblue">Projects</h2>
 			<!-- <h5 class="darkblue">Whether I am working on the front-end or back-end, I use methodology along with creativity and problem solving skills to build out purposeful applications.</h5> -->
 			<h5 class="example">These are a couple of projects that I have worked on which help solidify my skills as a developer.</h5>
-		
+
 		<ul class="collapsible popout" data-collapsible="accordion">
 			<li>
 			<div class="collapsible-header"><h4><i class="large material-icons plus">add_circle</i>Techliner</h4><p>React</p></div>
@@ -184,7 +184,7 @@
 					</div>
 					<div class="box-two">
 						<h5>Description</h5>
-						<p class="body-padding">A social app geared towards young, affluent users to discover, showcase and 
+						<p class="body-padding">A social app geared towards young, affluent users to discover, showcase and
 						list luxury items/services. Has login and registration, backend and frontend validations. Front page features a randomly generated item so it has some chance to gain exposure to other users.</p>
 						<h5>Responsibilities</h5>
 						<ul class="bullets">
@@ -203,7 +203,7 @@
 			<li>
 				<div class="collapsible-header"><h4><i class="large material-icons plus">add_circle</i>DoggyCrate</h4><p>Java</p></div>
 				<div class="collapsible-body">
-					<div class="box-one">	
+					<div class="box-one">
 						<iframe width="560" height="315" src="https://www.youtube.com/embed/VvktAVBA8x4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 					</div>
 					<div class="box-two">
@@ -229,7 +229,7 @@
 				<div class="collapsible-header"><h4><i class="large material-icons plus">add_circle</i>Engage</h4><p>Java</p></div>
 				<div class="collapsible-body">
 					<div class="box-one">
-						
+
 						<iframe width="560" height="315" src="https://www.youtube.com/embed/KZLEh-QOYPQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 					</div>
 					<div class="box-two">
@@ -264,7 +264,7 @@
 						<ul class="bullets">
 							<li><p> Set up validations and error handling.</p></li>
 							<li><p> Implemented regex to match and scrap weather data.</p></li>
-							
+
 						</ul>
 						<h5 class="built">This project was built with: </h5>
 						<p class="body-padding">PHP, HTML, BootStrap, jQuery</p>
@@ -331,7 +331,7 @@
 		<div id="contact" class="container"><br>
 			<h2 class="darkblue">Contact Me</h2>
 			<div class="body-padding">
-				<p class="black-font">I always value for the opportunity to grow and contribute to a positive environment.</p> 
+				<p class="black-font">I always value for the opportunity to grow and contribute to a positive environment.</p>
 				<p class="black-font">Let's work together and turn ideas into reality. </p>
 				<p class="black-font">Feel free to contact me at <a href="mailto:wtran4hire@gmail.com">wtran4hire@gmail.com</a>.</p>
 			</div>
