--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -61,7 +61,7 @@
 			<h2>About Me</h2>
 			<div class="me-section">
 				<div class="about-me2">
-					<img src="../assets/profile.jpg" class="me">
+					<img src="../assets/profile2.jpg" class="me">
 					<h5 class="darkblue">Vision</h5>
 					<p class="black-font">To bring value through functionality, innovation and design.</p>
 				</div>
